Fixing Prev/Next links' focus/hover in dark mode

--- a/assets/scss/posts-single.scss
+++ b/assets/scss/posts-single.scss
@@ -33,6 +33,9 @@
 		text-decoration-thickness: var.$textDcThick; // always rem
 		text-underline-offset: var.$textUnOffst; // always em
 		text-decoration-skip-ink: auto;
+		@media (prefers-color-scheme) {
+			color: map-get(var.$twcss, gray-200);
+		}
 	}
 }
 
